# license-crawler

./: .gitignore  README.md  dependencies.csv  hello.py  json_to_csv.py  license_crawler.py  process_dependencies.py  pyproject.toml  test_scan.py
poetry_test_repo/: pyproject.toml
test_output/: poetry_deps.json  standard_deps.json  test_deps.json
test_repo/: pyproject.toml
