[tool.poetry]
name = "poetry-test-project"
version = "0.1.0"
description = "A test project for Poetry dependency detection"
authors = ["Test User <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"